tests/misc_tests/type_eq_ui_tests/type_fn_non_bracketed-err.stderr
error: struct declaration must use square brackets for generics
       help: use `WithTypeParam[...]`
 --> tests/misc_tests/type_eq_ui_tests/type_fn_non_bracketed-err.rs:1:1
  |
1 | / typewit::type_fn!{
2 | |     struct WithTypeParam<T>;
3 | |     () => ()
4 | | }
  | |_^
  |
  = note: this error originates in the macro `typewit::type_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `for<...> ...` parameters must be parenthesized
  --> tests/misc_tests/type_eq_ui_tests/type_fn_non_bracketed-err.rs:6:1
   |
6  | / typewit::type_fn!{
7  | |     struct NakedForBinder;
8  | |
9  | |     for<'a> fn(&'a ()) => ()
10 | | }
   | |_^
   |
   = note: this error originates in the macro `$crate::__tyfn_parse_fns` which comes from the expansion of the macro `typewit::type_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
