tests/misc_tests/type_eq_ui_tests/type_fn_non_bracketed-err.rs
typewit::type_fn!{
    struct WithTypeParam<T>;
    () => ()
}

typewit::type_fn!{
    struct NakedForBinder;

    for<'a> fn(&'a ()) => ()
}


fn main(){}